--- a/css/youcommunik/index.html
+++ b/css/youcommunik/index.html
@@ -10,17 +10,31 @@
 </head>
 
 <body>
+    <section id="body">
     <header class="header">
-        <div><img src="./public/img/logo-horizontal-fond-noir-couleur.png" alt=""></div>
-        <div class="ul2">
-            <ul class="ul1">
-                <li><a href="">HOME<img src="./public/img/home-icon.png" alt=""> </a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
+        <div class="img1">
+            <img class="imgdiv" src="./public/img/logo-horizontal-fond-noir-couleur.png" alt="">
+        </div>
+        <div class="div1">
+
+            <div class="divicon">
+                <a href=""><img src="./public/img/home-icon.png" alt=""></a>
+                <a href=""><img src="./public/img/packages-icon.png" alt=""></a>
+                <a href=""><img src="./public/img/outils-icon.png" alt=""></a>
+                <a href=""><img src="./public/img/projets-icon.png" alt=""></a>
+                <a href=""><img src="./public/img/temoignages-icon.png" alt=""></a>
+                <a href=""><img src="./public/img/contact-icon.png" alt=""></a>
+            </div>
+            <div class="ul2">
+                <ul class="ul1">
+                    <li><a href="">HOME </a></li>
+                    <li><a href="">PACKAGES</a></li>
+                    <li><a href="">OUTILS</a></li>
+                    <li><a href="">PROJETS</a></li>
+                    <li><a href="">TEMOIGNAGES</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+            </div>
         </div>
     </header>
     <section class="bleugris">
@@ -99,7 +113,7 @@
             </ul>
         </div>
     </footer>
-
+</section>
 </body>
 
 </html>
