--- a/css/youcommunik/index.html
+++ b/css/youcommunik/index.html
@@ -12,7 +12,7 @@
 <body>
     <section id="body">
     <header class="header">
-        <div class="img1">
+        <div class="img">
             <img class="imgdiv" src="./public/img/logo-horizontal-fond-noir-couleur.png" alt="">
         </div>
         <div class="div1">
@@ -38,8 +38,13 @@
         </div>
     </header>
     <section class="bleugris">
-        <div></div>
-        <div></div>
+        <div class="imggris">
+            <img class="limage" src="./public/img/packages.png" alt="">
+        </div>
+        <div class="lesh">
+            <h1>À chaque étape son pack</h1>
+            <h2>naître, grandir et prospérer.</h2>
+        </div>
     </section>
     <section class="blanc">
         <div></div>
